app/events/event-details/event-details.component.css
.info-container {
  padding: 15;
}

.info-wrapper {
  margin: 15 0 0 0;
  padding-bottom: 15;
  border-width: 0;
  border-bottom-width: 1;
  border-color: #ebebed;
}

.info-wrapper.no-separator {
  border-width: 0;
}

.info-wrapper .info-label {
  margin-bottom: 5;
  font-size: 12;
  color: #F4550F;
  text-transform: uppercase;
}

.info-wrapper .info-value {
  color: #000;
}

.info-wrapper .info-value.date {
  font-size: 15;
}
.user-image,
.expandable {
  vertical-align: middle;
}

.btn {
  margin-right: 0;
  margin-left: 0;
}

.vote,
.info-label,
.votes-count,
.user-display-wrp,
.user-display,
.registered-users-wrapper .info-icon {
  vertical-align: middle;
}

.info-icon {
  width: 30;
  height: 30;
  horizontal-align: right;
  font-size: 26;
  color: #F4550F;
  text-align: center;
}

.registered-users-wrapper .info-icon {
  width: 20;
  height: 20;
  margin-top: 4;
  font-size: 16;
  color: #bfbfbf;
}

.tbd {
  margin-left: 5;
}

.expandable Label {
  font-size: 12;
  font-weight: bold;
}

.vote {
  margin-right: 10;
  padding-top: 3;
}

.vote.yes {
  color: green;
}

.vote.no {
  color: #ff0000;
}

.votes-count {
  font-size: 12;
  color: #9d9d9d;
}

.ribbon {
  width: 73;
  height: 34;
  margin-top: 5;
  color: #F4550F;
  font-size: 12;
  font-weight: bold;
  background-image: url("res://background_registered_label_event");
  background-repeat: no-repeat;
  background-size: cover;
}

.ribbon.ribbon-past-event {
  width: 100;
}

.going-label {
  color: #000;
  margin-left: 5;
  margin-top: 0;
}

